test/org/midica/testfiles/failing/opt-tuplet-invalid-4.midica
INCLUDE inc/instruments.midica

VAR $x = 5

( t=:3
	0  c  /4
)
